2014-06-19  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix: dwim operator contradicts the documentation
	and intended design.

	* eval.c (do_eval): When calling do_eval_args to evaluate
	the arguments of a compound form that is a function call,
	do not pass down the lookup function, but substitute &lookup_var.
	Passing down the lookup function means tha all evaluation
	enclosed in (dwim ...) or [...] follows the Lisp-1 style.

2014-06-19  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (me_ap): New static function.
	(eval_init): Use new list_f instead of func_n0v(identity).
	Register multi as intrinsic.  Register me_ap as ap macro.

	* lib.c (list_f): New global variable.
	(multi): New function.
	(multi_sort): Use list_f in place of func_n0v(identity).
	(obj_init): gc-protect and initialize list_f.

	* lib.h (list_f, multi): Declared.

	* txr.1: Documented multi and ap.

2014-06-18  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (eval_init): Register member and member_if as intrinsics.

	* lib.c (member, member_if): New functions.

	* lib.h (member, member_if): Declared.

	* txr.1: Documented.

	* txr.vim: Regenerated.

2014-06-17  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (generic_funcall): Bugfixes: support symbols.
	Removed dubious statement which clamps nargs to the number
	of fixed parameters, breaking variadic calls.
	Test case: (mapcar 'list '(1 2)) -> ((1) (2))
	Note: generic_funcall is only used when non-function objects
	are used as functions; variadic funcalls were not broken.

2014-06-17  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (generic_funcall): Bugfixes: support symbols.
	Removed dubious statement which clamps nargs to the number
	of fixed parameters, breaking variadic calls.
	Test case: (mapcar 'list '(1 2)) -> ((1) (2))

2014-06-17  Kaz Kylheku  <kaz@kylheku.com>

	* txr.1: Fix broken examples for some and none functions.

2014-06-17  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (not_null): New static function.
	(eval_init): Use null_f in existing registration of null